# prompt-drift-lab

./: LICENSE  README.md  pyproject.toml
configs/: experiment.yaml
data/results/: full_response_list.csv  responses.json  side_by_side_comparison.csv
reports/: paper.md
src/prompt_drift/: __init__.py  inference.py  metrics.py  prompts.py  visualization.py
