[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-drift-lab"
version = "0.1.0"
description = "Measuring LLM behavioral consistency under prompt perturbation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "google-genai>=2.10.0",
    "sentence-transformers>=5.6.0",
    "transformers>=4.41.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
